--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -9,7 +9,7 @@
         <form class="signup-form" action="/signup" method="POST">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-control">
-                <label for="usrName">Nome</label>
+                <label for="usrName">Username</label>
                 <input type="string" name="usrName" id="usrName" required>
             </div>
             <div class="form-control">
