--- a/public/css/match.css
+++ b/public/css/match.css
@@ -48,6 +48,11 @@
     margin-bottom: 0.5rem;
 }
 
+.match__playerCount__in {
+    text-align: center;
+    margin-bottom: 0.5rem;
+}
+
 .match__price {
     text-align: center;
     color: #4d4d4d;
