--- a/views/app/match-list.ejs
+++ b/views/app/match-list.ejs
@@ -2,6 +2,32 @@
     <link rel="stylesheet" href="/css/match.css">
 </head>
 
+<script>
+
+    function animateValue(obj, start, end, duration) {
+        let startTimestamp = null;
+        const step = (timestamp) => {
+        if (!startTimestamp) startTimestamp = timestamp;
+        const progress = Math.min((timestamp - startTimestamp) / duration, 1);
+        obj.innerHTML = Math.floor(progress * (end - start) + start);
+        if (progress < 1) {
+            window.requestAnimationFrame(step);
+        }
+        };
+        window.requestAnimationFrame(step);
+    }
+
+    window.addEventListener("load", () => { 
+        let list = document.getElementsByClassName("match__playerCount__in");
+        for (var i = 0; i < list.length; i++) {
+            list[i].id = "match__playerCount_" + (i + 1);
+            const counter = document.getElementById(list[i].id);
+            animateValue(counter, 0, counter.innerHTML, 1000);
+        }
+    });
+
+</script>
+
 <body>
     <%- include('../includes/navigation.ejs') %>
     <main>
@@ -19,7 +45,7 @@
                     </div>
                     <div class="card__content">
                         <h2 class="match__playerCount">We search:</h2>
-                            <h2 class="match__playerCount" style="color: #513dff;"><%= match.totalPlayers - match.currentPlayers %></h2>
+                            <h2 class="match__playerCount__in" style="color: #513dff;"><%= match.totalPlayers - match.currentPlayers %></h2>
                         <h2 class="match__playerCount"> players!</h2>
                         <br>
                         <h2 class="match__place">
