--- a/views/app/match-detail.ejs
+++ b/views/app/match-detail.ejs
@@ -36,10 +36,18 @@ if ("<%= isAuthenticated %>") {
 function sendMessage() {
     let textarea = document.getElementById('chatMessage');
 	let chatMessage = textarea.value;
+    var currentdate = new Date(); 
+     var datetime = 
+    //                 + currentdate.getDate() + "/"
+    // //             + (currentdate.getMonth()+1) + " @ "  
+                + currentdate.getHours() + ":"  
+                + currentdate.getMinutes();
+    console.log(datetime);            
+
 	console.log(`You sent a message: ${chatMessage}`);
 	
 	// Info, concerned messages exchange, are dynamically inserted in the HTML5 page
-	scratchPad.insertAdjacentHTML( 'beforeEnd', `<p>Time: ${(performance.now() / 1000).toFixed(3)} --> You sent a message: </p>`);
+	scratchPad.insertAdjacentHTML( 'beforeEnd', `<p>${datetime}: </p>`);
 	scratchPad.insertAdjacentHTML( 'beforeEnd', `<p style="color:green"> ${chatMessage} </p>`);	 
 
 	if(chatMessage == "Bye"){
@@ -59,7 +67,8 @@ function sendMessage() {
 		socket.emit('message', {
 			room: room,
 			message: chatMessage,
-            name: user
+            name: user,
+            date: datetime
 		});
 	}
     textarea.value = ''
@@ -115,7 +124,7 @@ socket.on('message', (message) => {
 	console.log(`Got message from other peer: ${message}`);
 	
 	// Info, concerned messages exchange, are dynamically inserted in the HTML5 page
-	scratchPad.insertAdjacentHTML( 'beforeEnd', `<p>Time: ${(performance.now() / 1000).toFixed(3)} -->${message.name}: </p>`);
+	scratchPad.insertAdjacentHTML( 'beforeEnd', `<p>${message.date} --> ${message.name}: </p>`);
     scratchPad.insertAdjacentHTML( 'beforeEnd', `<p style="color:blue"> ${message.message} </p>`);	  
 });
 
@@ -215,7 +224,20 @@ socket.on('Bye', () => {
                         </header>
                         <hr>
                         <div class="card__content">
-                            <div class="chatBox" id="scratchPad"></div>
+                            <div class="chatBox" id="scratchPad">
+
+                                <% if (chat.length > 0) { %>
+                                    
+                                    <% for (let message of chat) { %>
+                                    
+                                        <p><%= message.date %> --> <%= message.name %>: </p>
+                                        <p style="color:blue"> <%= message.msg %> </p>
+
+                                        <% } %>
+
+                                        <% } %>
+
+                            </div>
                             <br>
                             <div id="container">
                                 <input type="text" id="chatMessage" name="chat-message">
