--- a/views/app/match-detail.ejs
+++ b/views/app/match-detail.ejs
@@ -33,6 +33,11 @@ if ("<%= isAuthenticated %>") {
     socket.emit('create or join', room);
 }
 
+window.addEventListener("load", () => {
+    scratchPad.scrollTop = scratchPad.scrollHeight;
+    //console.log("TEST SCROLL")
+});
+
 function sendMessage() {
     let textarea = document.getElementById('chatMessage');
 	let chatMessage = textarea.value;
@@ -45,32 +50,45 @@ function sendMessage() {
     console.log(datetime);            
 
 	console.log(`You sent a message: ${chatMessage}`);
+
+    let divMessageChat = document.createElement('div')
+    divMessageChat.className = "messages-chat"
+
+    let divMessage = document.createElement('div')
+    divMessage.className = "message"
+
+    let pText = document.createElement('p')
+    let pElementText = document.createTextNode(chatMessage)
+    pText.appendChild(pElementText)
+    pText.className = "text"
+
+    let pTime = document.createElement('p')
+    let pElementTime = document.createTextNode(datetime)
+    pTime.appendChild(pElementTime)
+    pTime.className = "time"
+
+    divMessage.appendChild(pText)
+    //divMessage.appendChild(pTime)
+
+    divMessageChat.appendChild(divMessage)
+    divMessageChat.appendChild(pTime)
+
+    let parent = document.querySelector('#scratchPad')
+    parent.appendChild(divMessageChat)
 	
 	// Info, concerned messages exchange, are dynamically inserted in the HTML5 page
-	scratchPad.insertAdjacentHTML( 'beforeEnd', `<p>${datetime}: </p>`);
-	scratchPad.insertAdjacentHTML( 'beforeEnd', `<p style="color:green"> ${chatMessage} </p>`);	 
+	//scratchPad.insertAdjacentHTML( 'beforeEnd', `<p>${datetime}: </p>`);
+	//scratchPad.insertAdjacentHTML( 'beforeEnd', `<p style="color:green"> ${chatMessage} </p>`);	 
 
-	if(chatMessage == "Bye"){
-		scratchPad.insertAdjacentHTML( 'beforeEnd', '<p>Time: ' + (performance.now() / 1000).toFixed(3) + ' --> Sending "Bye" to server...</p>');
-		console.log('Sending "Bye" to server');
+    scratchPad.scrollTop = scratchPad.scrollHeight;
+	
+    socket.emit('message', {
+        room: room,
+        message: chatMessage,
+        name: user,
+        date: datetime
+    });
 
-		socket.emit('Bye', room);
-
-		// Info, concerned messages exchange, are dynamically inserted in the HTML5 page
-		scratchPad.insertAdjacentHTML( 'beforeEnd', '<p>Time: ' + (performance.now() / 1000).toFixed(3) + ' --> Going to disconnect...</p>');
-		console.log('Going to disconnect...');
-
-		// Disconnect from server
-		// not necessary, the server will disconnect the client
-		// socket.disconnect();
-	} else {
-		socket.emit('message', {
-			room: room,
-			message: chatMessage,
-            name: user,
-            date: datetime
-		});
-	}
     textarea.value = ''
 }
 
@@ -82,14 +100,6 @@ socket.on('created', (room) => {
 	// Info, concerned messages exchange, are dynamically inserted in the HTML5 page
 	//scratchPad.insertAdjacentHTML( 'beforeEnd', `<p>Time: ${(performance.now() / 1000).toFixed(3)} --> room ${room} has been created! </p>`);
     //scratchPad.insertAdjacentHTML( 'beforeEnd', `<p>Time: ${(performance.now() / 1000).toFixed(3)} --> This peer is the initiator... </p>`);
-});
-
-//Handle 'full' message
-socket.on('full', (room) => {
-	console.log(`room ${room} is too crowded!`);
-
-	// Info, concerned messages exchange, are dynamically inserted in the HTML5 page
-    scratchPad.insertAdjacentHTML( 'beforeEnd', `<p>Time: ${(performance.now() / 1000).toFixed(3)} --> room ${room} is too crowded! </p>`);
 });
 
 //Handle 'remotePeerJoining' message
@@ -124,38 +134,38 @@ socket.on('message', (message) => {
 	console.log(`Got message from other peer: ${message}`);
 	
 	// Info, concerned messages exchange, are dynamically inserted in the HTML5 page
-	scratchPad.insertAdjacentHTML( 'beforeEnd', `<p>${message.date} --> ${message.name}: </p>`);
-    scratchPad.insertAdjacentHTML( 'beforeEnd', `<p style="color:blue"> ${message.message} </p>`);	  
+	//scratchPad.insertAdjacentHTML( 'beforeEnd', `<p>${message.date} --> ${message.name}: </p>`);
+    //scratchPad.insertAdjacentHTML( 'beforeEnd', `<p style="color:blue"> ${message.message} </p>`);
+
+    let divMessageChat = document.createElement('div')
+    divMessageChat.className = "messages-chat"
+
+    let divMessage = document.createElement('div')
+    divMessage.className = "receive-message"
+
+    let pText = document.createElement('p')
+    let pElementText = document.createTextNode(message.message)
+    pText.appendChild(pElementText)
+    pText.className = "receive-text"
+
+    let pTime = document.createElement('p')
+    let pElementTime = document.createTextNode(message.date + " " + message.name)
+    pTime.appendChild(pElementTime)
+    pTime.className = "receive-time"
+
+    divMessage.appendChild(pText)
+    //divMessage.appendChild(pTime)
+
+    divMessageChat.appendChild(divMessage)
+    divMessageChat.appendChild(pTime)
+
+    let parent = document.querySelector('#scratchPad')
+    parent.appendChild(divMessageChat)
+
+    scratchPad.scrollTop = scratchPad.scrollHeight;
+    
 });
 
-//Handle 'Bye' message
-socket.on('Bye', () => {
-	console.log(`Got message from other peer: Bye`);
-	
-	// Info, concerned messages exchange, are dynamically inserted in the HTML5 page
-	scratchPad.insertAdjacentHTML( 'beforeEnd', `<p>Time: ${(performance.now() / 1000).toFixed(3)} --> Got message from other peer: </p>`);
-    scratchPad.insertAdjacentHTML( 'beforeEnd', `<p style="color:blue"> Bye </p>`);	 
-
-	console.log('Got "Bye" from other peer! Going to disconnect...');
-
-	// Info, concerned messages exchange, are dynamically inserted in the HTML5 page
-	scratchPad.insertAdjacentHTML( 'beforeEnd', '<p>Time: ' + (performance.now() / 1000).toFixed(3) + ' --> Got "Bye" from other peer!</p>');
-	scratchPad.insertAdjacentHTML( 'beforeEnd', '<p>Time: ' + (performance.now() / 1000).toFixed(3) + ' --> Sending "Ack" to server</p>');
-
-	// Send 'Ack' back to remote party through server
-	console.log('Sending "Ack" to server');
-
-	socket.emit('Ack');
-
-	console.log('Going to disconnect...');
-
-	// Info, concerned messages exchange, are dynamically inserted in the HTML5 page
-	scratchPad.insertAdjacentHTML( 'beforeEnd', '<p>Time: ' + (performance.now() / 1000).toFixed(3) + ' --> Going to disconnect...</p>');
-	
-	// Disconnect from server
-	// not necessary, the server will disconnect the client
-	// socket.disconnect();
-});
 </script>
 
 <body>
@@ -215,7 +225,7 @@ socket.on('Bye', () => {
                     </div>
                     <br>
                 </article>
-                <% if (isAuthenticated) { %>
+                <% if (isAuthenticated && is_in) { %>
 
                     <article class="card match-item">
                         <header class="card__header">
@@ -224,7 +234,7 @@ socket.on('Bye', () => {
                         </header>
                         <hr>
                         <div class="card__content">
-                            <div class="chatBox" id="scratchPad">
+                            <div class="chat" id="scratchPad">
 
                                 <% if (chat.length > 0) { %>
                                     
@@ -233,12 +243,12 @@ socket.on('Bye', () => {
                                         <p><%= message.date %> --> <%= message.name %>: </p>
                                         <p style="color:blue"> <%= message.msg %> </p>
 
-                                        <% } %>
+                                    <% } %>
 
-                                        <% } %>
+                                <% } %>
 
                             </div>
-                            <br>
+
                             <div id="container">
                                 <input type="text" id="chatMessage" name="chat-message">
                                 <button class="btn" onClick="sendMessage()">Send</button>
