--- a/public/css/main.css
+++ b/public/css/main.css
@@ -175,7 +175,7 @@ form {
   transition: transform .2s; /* Animation */
 }
 
-.card:hover {
+.match-item:hover {
   transform: scale(1.05); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
