--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -6,15 +6,19 @@
 <body>
    <%- include('../includes/navigation.ejs') %>
     <main>
-        <form class="login-form" action="/login" method="POST">
+        <form class="login-form" action="/login" method="POST" novalidate>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-control">
                 <label for="email">E-mail</label>
-                <input type="email" name="email" id="email" required>
+                <input 
+                    class="<%= (errorMessage) ? 'invalid' : '' %>"
+                    type="email" name="email" id="email" value="<%= oldInput.email %>">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password" required>
+                <input 
+                    class="<%= (errorMessage) ? 'invalid' : '' %>"
+                    type="password" name="password" id="password" value="<%= oldInput.password %>">
             </div>
             <button class="btn" type="submit">Login</button>
         </form>
