--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -6,23 +6,31 @@
 <body>
    <%- include('../includes/navigation.ejs') %>
     <main>
-        <form class="signup-form" action="/signup" method="POST">
+        <form class="signup-form" action="/signup" method="POST" novalidate>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-control">
                 <label for="usrName">Username</label>
-                <input type="string" name="usrName" id="usrName" required>
+                <input 
+                    class="<%= validationErrors.find(e => e.param == 'usrName') ? 'invalid' : '' %>"
+                    type="string" name="usrName" id="usrName" value="<%= oldInput.usrName %>">
             </div>
             <div class="form-control">
                 <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email" required>
+                <input 
+                    class="<%= validationErrors.find(e => e.param == 'email') ? 'invalid' : '' %>"
+                    type="email" name="email" id="email" value="<%= oldInput.email %>">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password" required>
+                <input 
+                    class="<%= validationErrors.find(e => e.param == 'password') ? 'invalid' : '' %>"
+                    type="password" name="password" id="password" value="<%= oldInput.password %>">
             </div>
             <div class="form-control">
                 <label for="confirmPassword">Confirm Password</label>
-                <input type="password" name="confirmPassword" id="confirmPassword" required>
+                <input 
+                    class="<%= validationErrors.find(e => e.param == 'confirmPassword') ? 'invalid' : '' %>"
+                    type="password" name="confirmPassword" id="confirmPassword" value="<%= oldInput.confirmPassword %>">
             </div>
             <button class="btn" type="submit">Signup</button>
         </form>
