--- a/views/app/index.ejs
+++ b/views/app/index.ejs
@@ -1,17 +1,6 @@
 <%- include('../includes/head.ejs') %>
-    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
-    <meta charset="utf-8">
-    <title>Landing page template - Webflow HTML website template</title>
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <meta content="Webflow" name="generator">
-    <link href="https://uploads-ssl.webflow.com/63b53f7abad4713772e1a481/css/ciros-ultra-awesome-site.webflow.ff8fcf80b.css" rel="stylesheet" type="text/css">
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gothic+A1:300,regular,500,600,700,800" media="all">
-    <script type="text/javascript">WebFont.load({  google: {    families: ["Gothic A1:300,regular,500,600,700,800"]  }});</script>
-    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
-    <script type="text/javascript">
-      !function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);
-    </script>
+    <!-- link href="https://uploads-ssl.webflow.com/63b53f7abad4713772e1a481/css/ciros-ultra-awesome-site.webflow.ff8fcf80b.css" rel="stylesheet" type="text/css"> -->
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
@@ -22,7 +11,8 @@
          style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;" 
          class="hero-content">
           <h1 class="heading-3" style="text-shadow: 1px 1px 2px black;">Il Decimo</h1>
-          <h3 class="hero-subhead" style="text-shadow: 1px 1px 2px black;" >Mancano poche ore alla partita di calcetto e ti mancano dei giocatori?<br> 
+          <h3 class="hero-subhead" style="text-shadow: 1px 1px 2px black;">
+            Mancano poche ore alla partita di calcetto e ti mancano dei giocatori?<br> 
             Non riesci mai a trovare degli amici con cui giocare?
           </h3>
           <h2 style="text-shadow: 1px 1px 2px black;">Questo è il posto giusto!</h2>
@@ -39,9 +29,5 @@
          srcset="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png 500w, https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png 731w" 
          alt="" class="hero-image">
       </div>
-      <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63b53f7abad4713772e1a481" 
-       type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-      <script src="https://uploads-ssl.webflow.com/63b53f7abad4713772e1a481/js/webflow.4323451b1.js" type="text/javascript"></script>
-      <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 
 <%- include('../includes/end.ejs') %>
