--- a/views/app/match-detail.ejs
+++ b/views/app/match-detail.ejs
@@ -4,23 +4,11 @@
 <script src='/socket.io/socket.io.js'></script>
 
 <style>
-   
-    button {
-        background-color: #DAA520;
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin-top: 20px;
-        cursor: pointer;
-    }
     #chatMessage {
         width: calc(100% - 20px);
         margin: auto;
-        padding: 5px 0;
+        padding: 5px;
+        margin-bottom: 10px;
     }
     </style>
 </head>
@@ -36,69 +24,81 @@ if ("<%= isAuthenticated %>") {
 
 window.addEventListener("load", () => {
     scratchPad.scrollTop = scratchPad.scrollHeight;
-    //console.log("TEST SCROLL")
+});
+
+
+window.addEventListener("keypress", function(event) {
+    //console.log("KEY PRESS")
+    if (event.key === "Enter") {
+        event.preventDefault();
+        sendMessage();
+    }
 });
 
 function sendMessage() {
     let textarea = document.getElementById('chatMessage');
 	let chatMessage = textarea.value;
-    var currentdate = new Date();
     
-    var getMinutes= currentdate.getMinutes();
-    
-    if(currentdate.getMinutes() < 10){
-        var getMinutes= '0' + currentdate.getMinutes()
+    if (chatMessage != "") {
+        var currentdate = new Date();
+        
+        var getMinutes= currentdate.getMinutes();
+        
+        if(currentdate.getMinutes() < 10){
+            var getMinutes= '0' + currentdate.getMinutes()
+        }
+        
+
+        var datetime = 
+        //                 + currentdate.getDate() + "/"
+        // //             + (currentdate.getMonth()+1) + " @ "  
+                    + currentdate.getHours() + ":"  
+                    + getMinutes;
+        console.log(datetime);            
+
+        console.log(`You sent a message: ${chatMessage}`);
+
+        let divMessageChat = document.createElement('div')
+        divMessageChat.className = "messages-chat"
+
+        let divMessage = document.createElement('div')
+        divMessage.className = "message"
+
+        let pText = document.createElement('p')
+        let pElementText = document.createTextNode(chatMessage)
+        pText.appendChild(pElementText)
+        pText.className = "text"
+
+        let pTime = document.createElement('p')
+        let pElementTime = document.createTextNode(datetime)
+        pTime.appendChild(pElementTime)
+        pTime.className = "time"
+
+        divMessage.appendChild(pText)
+        //divMessage.appendChild(pTime)
+
+        divMessageChat.appendChild(divMessage)
+        divMessageChat.appendChild(pTime)
+
+        let parent = document.querySelector('#scratchPad')
+        parent.appendChild(divMessageChat)
+        
+        // Info, concerned messages exchange, are dynamically inserted in the HTML5 page
+        //scratchPad.insertAdjacentHTML( 'beforeEnd', `<p>${datetime}: </p>`);
+        //scratchPad.insertAdjacentHTML( 'beforeEnd', `<p style="color:green"> ${chatMessage} </p>`);	 
+
+        scratchPad.scrollTop = scratchPad.scrollHeight;
+        
+        socket.emit('message', {
+            room: room,
+            message: chatMessage,
+            name: user,
+            date: datetime
+        });
+
+        textarea.value = ''
     }
-    
 
-     var datetime = 
-    //                 + currentdate.getDate() + "/"
-    // //             + (currentdate.getMonth()+1) + " @ "  
-                + currentdate.getHours() + ":"  
-                + getMinutes;
-    console.log(datetime);            
-
-	console.log(`You sent a message: ${chatMessage}`);
-
-    let divMessageChat = document.createElement('div')
-    divMessageChat.className = "messages-chat"
-
-    let divMessage = document.createElement('div')
-    divMessage.className = "message"
-
-    let pText = document.createElement('p')
-    let pElementText = document.createTextNode(chatMessage)
-    pText.appendChild(pElementText)
-    pText.className = "text"
-
-    let pTime = document.createElement('p')
-    let pElementTime = document.createTextNode(datetime)
-    pTime.appendChild(pElementTime)
-    pTime.className = "time"
-
-    divMessage.appendChild(pText)
-    //divMessage.appendChild(pTime)
-
-    divMessageChat.appendChild(divMessage)
-    divMessageChat.appendChild(pTime)
-
-    let parent = document.querySelector('#scratchPad')
-    parent.appendChild(divMessageChat)
-	
-	// Info, concerned messages exchange, are dynamically inserted in the HTML5 page
-	//scratchPad.insertAdjacentHTML( 'beforeEnd', `<p>${datetime}: </p>`);
-	//scratchPad.insertAdjacentHTML( 'beforeEnd', `<p style="color:green"> ${chatMessage} </p>`);	 
-
-    scratchPad.scrollTop = scratchPad.scrollHeight;
-	
-    socket.emit('message', {
-        room: room,
-        message: chatMessage,
-        name: user,
-        date: datetime
-    });
-
-    textarea.value = ''
 }
 
 //Handle 'created' message
@@ -252,7 +252,6 @@ socket.on('message', (message) => {
                                             <% if(message.name == user){ %>
                                             <div class="message">
                                                 <p class="text"> <%= message.msg %></p>
-                                                
                                             </div>
                                             <p class="time"><%= message.date %></p>
                                             <% } else {%>
@@ -271,12 +270,12 @@ socket.on('message', (message) => {
 
                             </div>
 
-                            <div id="container">
-                                <input type="text" id="chatMessage" name="chat-message">
-                                <button class="btn" onClick="sendMessage()">Send</button>
+                            <div id="container" class="footer-chat">
+                                <input type="text" class="write-message" id="chatMessage" name="chat-message" placeholder="Type your message here"></input>
+                                <i class="icon send fa fa-paper-plane-o clickable" onClick="sendMessage()" aria-hidden="true"></i>
                             </div>
+                            <!-- <button id="chatButton" class="btn" onClick="sendMessage()">Send</button> -->
                         </div>
-                        <br>
                     </article>
         
                 <% } %>
