--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+input[type='text'],
+input[type='number'],
+input {
+  font-size: 16px;
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -33,7 +39,7 @@ form {
 
 .main-header {
   width: 100%;
-  height: 3.5rem;
+  height: 4rem;
   background-color: #513dff;
   padding: 0 1.5rem;
   display: flex;
@@ -79,7 +85,7 @@ form {
 }
 
 .mobile-nav {
-  width: 30rem;
+  width: 18rem;
   height: 100vh;
   max-width: 90%;
   position: fixed;
@@ -126,7 +132,7 @@ form {
 .mobile-nav__item a.active,
 .mobile-nav__item button:hover,
 .mobile-nav__item button:active {
-  background: #00695c;
+  background: #513dff;
   color: white;
   border-radius: 3px;
 }
