IMPLEMENTAZIONE OAUTH GOOGLE

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -21,6 +21,7 @@
                     type="password" name="password" id="password" value="<%= oldInput.password %>">
             </div>
             <button class="btn" type="submit">Login</button>
+            <a class="button google" href="/login/federated/google">Sign in with Google</a>
         </form>
         <br>
         <% if (errorMessage) { %>
