--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -92,7 +92,7 @@
 					</div>
 
 					<div class="flex-c-m">
-						<a href="#" class="login100-social-item bg1">
+						<a href="/login/federated/facebook" class="login100-social-item bg1">
 							<i class="fa fa-facebook"></i>
 						</a>
 
