--- a/views/app/match-detail.ejs
+++ b/views/app/match-detail.ejs
@@ -1,13 +1,13 @@
 <%- include('../includes/head.ejs') %>
 <link rel="stylesheet" href="/css/match.css">
 <link rel="stylesheet" href="/css/chat.css">
+<link rel="stylesheet" href="/css/reactions.css">
 <script src='/socket.io/socket.io.js'></script>
 
 </head>
 
 <script> 
 if ("<%= isAuthenticated %>") {
-    if("<%= isAuthenticated %>")
     socket = io();
     room = "<%= m._id %>"; 
     user = "<%= user %>";
@@ -17,7 +17,6 @@ if ("<%= isAuthenticated %>") {
 window.addEventListener("load", () => {
     scratchPad.scrollTop = scratchPad.scrollHeight;
 });
-
 
 window.addEventListener("keypress", function(event) {
     //console.log("KEY PRESS")
@@ -220,6 +219,9 @@ socket.on('message', (message) => {
                             <% }%>
                         <% } %>
                     </div>
+                    <% if (isAuthenticated && is_in && isOver || false) { %>
+                        <%- include('../includes/voting.ejs') %>
+                    <% } %>
                     <br>
                 </article>
                 <article class="card match-item">
@@ -260,8 +262,7 @@ socket.on('message', (message) => {
                                             <p class="time"><%= message.date %></p>
                                             <% } else {%>
                                                 <div class="receive-message">
-                                                    <p class="receive-text"> <%= message.msg %></p>
-                                                    
+                                                    <p class="receive-text"> <%= message.msg %> </p>
                                                 </div>
                                                 <p class="receive-time"><%= message.date %> <strong><%= message.name %></strong></p>
                                             <% } %>
