Modifica vista Home

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -87,7 +87,7 @@
 
 					<div class="txt1 text-center p-t-54 p-b-20">
 						<span>
-							Or Sign Up Using
+							Or Sign In Using
 						</span>
 					</div>
 
@@ -111,9 +111,9 @@
                         <% } %>
                     </div>
 
-					<div class="flex-col-c p-t-65">
+					<div class="flex-col-c">
 						<span class="txt1 p-b-17">
-							Or Sign Up Using
+							Or
 						</span>
 
 						<a style="text-decoration: none;" href="/signup" class="txt2">
