--- a/public/css/index.css
+++ b/public/css/index.css
@@ -29,9 +29,8 @@ a {
     color: #000;
     text-decoration: none;
 }
-
 .heading-3 {
-    font-size: 6vw;
+    font-size: 60pt;
 }
 
 .section {
@@ -41,17 +40,25 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-left: 50px;
 }
 
 .section.center {
-    position: relative;
+    position: absolute;
     display: flex;
     height: 100vh;
     padding-top: 0vh;
     justify-content: center;
     align-items: flex-start;
-    background-color: #4128ff;
-    background-image: linear-gradient(135deg, #2f1cbb, #0e3247);
+    background-image: url('https://img.freepik.com/free-vector/gradient-style-football-field-background_23-2148995842.jpg?w=1060&t=st=1673892912~exp=1673893512~hmac=24d121fca1e26a529ad0e20a5b96c4dd30c96ae2dabed086fd2f703897af5c37');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    opacity: 85%;
+}
+
+body {
+    background-color: #000;
 }
 
 .hero-subhead {
@@ -59,21 +66,6 @@ a {
     color: #fff;
     font-size: 30px;
     line-height: 44px;
-}
-
-.hero-image {
-    position: absolute;
-    right: 3vw;
-    bottom: 0px;
-    height: 85vh;
-}
-
-.hero-content {
-    position: relative;
-    z-index: 90;
-    width: 100%;
-    padding-right: 10vh;
-    padding-left: 10vw;
 }
 
 .button {
