--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -129,7 +129,7 @@
                         <% } %>
                     </div>
 
-                    <div class="txt1 text-center p-t-54 p-b-20">
+                    <div class="txt1 text-center">
                         <span>
                             Or Sign Up Using
                         </span>
