--- a/views/app/index.ejs
+++ b/views/app/index.ejs
@@ -5,7 +5,7 @@
 
 <body>
     <%- include('../includes/navigation.ejs') %>
-    <div class="section center wf-section">
+    <div class="section center ">
       <h1 class="heading-3" style="text-shadow: 1px 1px 2px black;">Il Decimo</h1>
       <h3 class="hero-subhead" style="text-shadow: 1px 1px 2px black;">
         Mancano poche ore alla partita di calcetto e ti mancano dei giocatori?<br> 
